6763959: java.util.concurrent.locks.LockSupport.parkUntil(0) blocks forever

Absolute time 0 needs to return immediately.

Reviewed-by: phh, dcubed, dholmes